Switching base image from openjdk:17-jdk-slim-bullseye to alpine:latest